k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: triton-server
  namespace: sam-service-triton
  labels:
    app: triton-server
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  - port: 8001
    targetPort: 8001
    protocol: TCP
    name: grpc
  - port: 8002
    targetPort: 8002
    protocol: TCP
    name: metrics
  selector:
    app: triton-server
